--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,37 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Muli&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  /* background-image: linear-gradient(90deg, #fa5fff9f, #aa52e4eb); */
-  background-image: linear-gradient(90deg, #b46cb79f, #9450c1eb);
-  font-family: "Roboto", sans-serif;
+  background-image: linear-gradient(90deg, #d48bd6b1, #7e44a5);
+  font-family: "Muli", sans-serif;
   display: flex;
   align-items: center;
-  justify-content: center;
   height: 100vh;
+  width: 100vw;
   margin: 0;
   overflow: hidden;
 }
 
 .search {
   position: relative;
-  height: 60px;
+  height: 100%;
+  width: 40%;
 }
 
 .search .input {
   background-color: #fff;
   border: 0;
   font-size: 18px;
-  height: 100%;
-  width: 50px;
+  height: 60px;
+  width: 60px;
   transition: width 0.3s ease;
   visibility: hidden;
+  position: absolute;
+  top: 45%;
+  left: 40%;
 }
 
 .btn {
@@ -37,11 +40,11 @@ body {
   border-radius: 50%;
   cursor: pointer;
   font-size: 24px;
-  height: 100%;
+  height: 60px;
   width: 60px;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 45%;
+  left: 40%;
   transition: transform 0.3s ease;
 }
 
@@ -63,4 +66,35 @@ body {
 
 .btn i {
   color: #9450c1;
+}
+
+.quote-container {
+  height: 100vh;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quote-card {
+  background-color: #e2ade477;
+  width: 50%;
+  height: 40%;
+  padding:10% 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  color: #3c1b53;
+  box-shadow: -13px 0px 16px 15px #e2ade477;
+}
+
+.quote-card .quote {
+  font-size: 32px;
+  text-transform: lowercase;
+}
+
+.quote-card .author {
+  font-style: italic;
 }
